--- a/index.html
+++ b/index.html
@@ -3,9 +3,9 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta name="description" content="Happy Birthday Soni Aapi">
+    <meta name="description" content="Happy Birthday Wishes">
     <meta name="keywords" content="birthday, cake, happy birthday, greetings, fireworks">
-    <title>Happy Birthday Soni Aapi</title>
+    <title>Happy Birthday Aapi</title>
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
